# rubiks-face-identifier

./: .gitignore  CMakeLists.txt
libs/: .gitignore
src/: calibration.cpp  main.cpp
src/data/: colour.cpp  colour.h  colour_definition.cpp  colour_definition.h  configuration.cpp  configuration.h  cube.cpp  cube.h  floodfillstate.cpp  floodfillstate.h  pixel.cpp  pixel.h  rect.cpp  rect.h  segmentationcolourobject.cpp  segmentationcolourobject.h  serializable.cpp  serializable.h
src/imgprocs/: framebufferiterator.cpp  framebufferiterator.h  segmentcolour.cpp  segmentcolour.h
src/procs/: colourmatches.cpp  colourmatches.h  device.cpp  device.h  floodfillstate.cpp  floodfillstate.h  framebufferiterator.cpp  framebufferiterator.h  gridfinder.cpp  gridfinder.h  gridtracer.cpp  gridtracer.h  segmentationcolourobject.cpp  segmentationcolourobject.h  segmentcolour.cpp  segmentcolour.h  visitors.cpp  visitors.h
test/: resources.cpp  resources.h
test/procs/: intersection_factor_test.cpp
test/resources/: .gitignore
test/resources/1/: 1.json
test/resources/config/: default.json
